Refactor class names

--- a/css/scss/production.scss
+++ b/css/scss/production.scss
@@ -1,6 +1,6 @@
 @import "base";
 @import "animations";
 @import "page";
-@import "gallery-thumbs";
+@import "gallery-overlay";
 @import "gallery";
 @import "view-transitions";
