--- a/css/scss/_base.scss
+++ b/css/scss/_base.scss
@@ -4,11 +4,13 @@
 }
 
 :root {
+  --font-body: "Roboto", sans-serif;
   --white: #fff;
+  --black: #000;
+  --black5: #f2f2f2;
   --blue: #428fbd;
   --red: #ff5722;
   --purple: #734f79;
-  --black5: #f2f2f2;
 }
 
 *,
@@ -17,19 +19,63 @@
   box-sizing: inherit;
 }
 
-html {
-  width: 100%;
+// Remove default margin
+* {
+  margin: 0;
+}
+
+// Allow percentage-based heights in the application
+html,
+body {
   height: 100%;
 }
 
+html {
+  width: 100%;
+  overflow: hidden; // ? needed ?
+}
+
 body {
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
+  font-family: var(--font-body);
+  line-height: 1.5;
   margin: 50px 0;
-  background: var(--black5);
+  background-color: var(--black5);
+
+  overflow: auto;
+  color: var(--black);
+}
+
+//  Improve media defaults
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+}
+
+// Remove built-in form typography styles
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+// 8. Avoid text overflows
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
 }
 
 .container {
-  max-width: 700px;
+  max-width: 1280px;
   margin-inline: auto;
 }
