--- a/css/scss/_base.scss
+++ b/css/scss/_base.scss
@@ -38,7 +38,7 @@ html {
 body {
   font-family: var(--font-body);
   line-height: 1.5;
-  margin: 50px 0;
+  margin: 0;
   background-color: var(--black5);
 
   overflow: auto;
