--- a/css/scss/_gallery.scss
+++ b/css/scss/_gallery.scss
@@ -1,42 +1,42 @@
-.galleryWrapper {
-  padding: 3rem 1rem;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
+.gallery__image--active {
+  view-transition-name: active-image;
 }
 
-.galleryImage {
+.gallery__image {
   object-fit: cover;
   object-position: 50% 50%;
   aspect-ratio: 1;
 }
 
-.galleryImage--active {
-  view-transition-name: active-image;
+.galleryWrapper {
+  padding: 3rem 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  max-width: 1280px;
+  margin: 0 auto;
+  font-family: "Barlow Condensed", sans-serif;
 }
 
 .figure {
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 700;
   display: block;
   cursor: pointer;
-  border: 1px solid #b5b5b5;
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, .1);
-  border-radius: 5px;
-  overflow: hidden;
+  background-color: var(--color);
+  border: 2px solid #111;
+  box-shadow: 5px 5px 0 1px #111;
 }
 
 .galleryImageWrapper {
   overflow: hidden;
   position: relative;
-  background-color: hsl(0, 0%, 0%, 0.3); // fill empty space left wne image is transitioned
+  background-color: hsl(0, 0%, 0%, 0.3);
   aspect-ratio: 1;
   background-position: 50% 50%;
   background-size: cover;
 }
 
 .figcaption {
-  font-size: 14px;
-  line-height: 1;
-  padding: 10px;
+  padding: 1rem;
 }
