--- a/css/scss/_gallery-overlay.scss
+++ b/css/scss/_gallery-overlay.scss
@@ -21,7 +21,7 @@
   display: none;
 }
 
-.overlay .gallery__image {
+.overlay .galleryImage {
   margin: 0 auto;
   max-height: calc(100vh - 4rem);
 }
