--- a/css/scss/_gallery.scss
+++ b/css/scss/_gallery.scss
@@ -1,13 +1,3 @@
-.galleryImageActive {
-  view-transition-name: active-image;
-}
-
-.galleryImage {
-  object-fit: cover;
-  object-position: 50% 50%;
-  aspect-ratio: 1;
-}
-
 .galleryWrapper {
   padding: 3rem 1rem;
   display: grid;
@@ -18,14 +8,24 @@
   font-family: "Barlow Condensed", sans-serif;
 }
 
+.galleryImage {
+  object-fit: cover;
+  object-position: 50% 50%;
+  aspect-ratio: 1;
+}
+
+.galleryImageActive {
+  view-transition-name: active-image;
+}
+
 .figure {
   font-size: 16px;
   font-weight: 700;
   display: block;
   cursor: pointer;
-  background-color: var(--color);
-  border: 2px solid #111;
-  box-shadow: 5px 5px 0 1px #111;
+  background-color: #505050;
+  border: 1px solid #d1d1d1;
+  box-shadow: 0 0 7px 2px rgba(0, 0, 0, .15);
 }
 
 .galleryImageWrapper {
@@ -38,5 +38,6 @@
 }
 
 .figcaption {
+  color: var(--white);
   padding: 1rem;
 }
